// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  style={
    Object {
      "gridArea": "auto / auto / auto / auto",
      "order": undefined,
    }
  }
>
  Grid Item
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="my-extra-class"
  style={
    Object {
      "gridArea": "auto / auto / auto / auto",
      "order": undefined,
    }
  }
>
  Grid Item
</div>
`;
